--- a/plugin.xml
+++ b/plugin.xml
@@ -29,16 +29,11 @@
     </platform>
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
-            <feature name="CrashlyticsPlugin">
-                <param name="ios-package" value="CrashlyticsPlugin"/>
+            <feature name="RaygunNativePlugin">
+                <param name="ios-package" value="RaygunNativePlugin"/>
             </feature>
         </config-file>
-        <header-file src="src/ios/CrashlyticsPlugin.h"/>
-        <source-file src="src/ios/CrashlyticsPlugin.m"/>
-        <framework src="src/ios/Crashlytics.framework" custom="true"/>
-        <framework src="src/ios/Fabric.framework" custom="true"/>
-        <framework src="Security.framework"/>
-        <framework src="libc++.dylib"/>
-        <framework src="libz.dylib"/>
+        <source-file src="src/ios/RaygunNativePlugin.swift"/>
+        <framework src="src/ios/Raygun4iOS.framework" custom="true"/>
     </platform>
 </plugin>
