--- a/plugin.xml
+++ b/plugin.xml
@@ -11,6 +11,10 @@
         <clobbers target="RaygunNativePlugin"/>
     </js-module>
     <platform name="android">
+    
+    	<!-- Require API key -->
+        <preference name="ANDROID_API_KEY"/>
+    
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="RaygunNativePlugin">
                 <param name="android-package" value="io.happie.raygun.RaygunNativePlugin"/>
@@ -18,7 +22,8 @@
         </config-file>
         <config-file target="AndroidManifest.xml" parent="application">
             <service   android:name="main.java.com.mindscapehq.android.raygun4android.RaygunPostService"
-                       android:exported="false" android:process=":raygunpostservice"/>
+                       android:exported="false" android:process=":raygunpostservice"/>                       
+	        <meta-data android:name="com.mindscapehq.android.raygun4android.apikey" android:value="$ANDROID_API_KEY"/>                   
         </config-file>
         <source-file src="src/android/RaygunNativePlugin.java" target-dir="src/io/happie/raygun"/>
         <source-file src="src/android/raygun4android-1.3.0.jar" target-dir="libs" />
