--- a/plugin.xml
+++ b/plugin.xml
@@ -39,5 +39,6 @@
             </feature>
         </config-file>
         <source-file src="src/ios/RaygunNativePlugin.swift"/>
+        <framework src="src/ios/Raygun4iOS.framework" custom="true"/>
     </platform>
 </plugin>
